<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/listing_card_margin_bottom"
    app:cardElevation="@dimen/listing_card_elevation">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/house_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/padding_normal">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/images_list"
            android:layout_width="match_parent"
            android:layout_height="@dimen/listing_image_height"
            android:background="@android:color/darker_gray"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/image_list_item">

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/listing_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_light"
            android:padding="@dimen/padding_micro"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/sample_listing_type" />

        <TextView
            android:id="@+id/price"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:textIsSelectable="true"
            android:textSize="@dimen/listing_item_price_text_size"
            app:layout_constraintBottom_toTopOf="@id/barrier_top"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/images_list"
            tools:text="@string/sample_price" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="top"
            app:constraint_referenced_ids="bathrooms_icon,size,bedrooms_icon,bedrooms,bathrooms" />

        <ImageView
            android:id="@+id/bedrooms_icon"
            android:layout_width="@dimen/listing_icon_size"
            android:layout_height="@dimen/listing_icon_size"
            android:layout_marginTop="@dimen/margin_micro"
            android:contentDescription="@string/bathroom_icon_content_description"
            android:src="@drawable/ic_bed_empty"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/barrier_top" />

        <TextView
            android:id="@+id/bedrooms"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_micro"
            android:textIsSelectable="true"
            android:textSize="@dimen/listing_item_text_size"
            app:layout_constraintBottom_toBottomOf="@id/bedrooms_icon"
            app:layout_constraintLeft_toRightOf="@id/bedrooms_icon"
            app:layout_constraintTop_toTopOf="@id/bedrooms_icon"
            tools:text="@string/sample_bedrooms" />

        <ImageView
            android:id="@+id/bathrooms_icon"
            android:layout_width="@dimen/listing_icon_size"
            android:layout_height="@dimen/listing_icon_size"
            android:contentDescription="@string/bathroom_icon_content_description"
            app:layout_constraintBottom_toBottomOf="@id/bedrooms_icon"
            app:layout_constraintLeft_toRightOf="@id/bedrooms"
            app:layout_constraintTop_toTopOf="@id/bedrooms_icon"
            app:srcCompat="@drawable/ic_hot_tub" />

        <TextView
            android:id="@+id/bathrooms"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_micro"
            android:textIsSelectable="true"
            android:textSize="@dimen/listing_item_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/bathrooms_icon"
            app:layout_constraintLeft_toRightOf="@id/bathrooms_icon"
            app:layout_constraintTop_toTopOf="@id/bathrooms_icon"
            tools:text="@string/sample_bathrooms" />

        <TextView
            android:id="@+id/size"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_micro"
            android:textIsSelectable="true"
            android:textSize="@dimen/listing_item_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/bathrooms_icon"
            app:layout_constraintLeft_toRightOf="@id/bathrooms"
            app:layout_constraintTop_toTopOf="@id/bathrooms_icon"
            tools:text="1,894 sqft" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="bathrooms_icon,size,bedrooms_icon,bedrooms,bathrooms" />

        <TextView
            android:id="@+id/address"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_micro"
            android:textColor="@android:color/darker_gray"
            android:textIsSelectable="true"
            android:textSize="@dimen/listing_item_text_size"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toTopOf="@+id/barrier_bottom"
            tools:text="@string/sample_address" />

        <TextView
            android:id="@+id/city"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/darker_gray"
            android:textIsSelectable="true"
            android:textSize="@dimen/listing_item_text_size"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/address"
            tools:text="@string/sample_city" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/margin_normal"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_end="@dimen/margin_normal" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
